[gd_scene load_steps=2 format=3 uid="uid://dgk1ipqq2uypw"]

[ext_resource type="Script" path="res://story/attributes.gd" id="1_xl3ae"]

[node name="Attributes" type="VBoxContainer"]
script = ExtResource("1_xl3ae")

[node name="Muscle" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Muscle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Muscle"

[node name="MuscleScore" type="SpinBox" parent="Muscle"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false

[node name="Blood" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Blood"]
layout_mode = 2
size_flags_horizontal = 3
text = "Blood"

[node name="BloodScore" type="SpinBox" parent="Blood"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false

[node name="Guts" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Guts"]
layout_mode = 2
size_flags_horizontal = 3
text = "Guts"

[node name="GutsScore" type="SpinBox" parent="Guts"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false

[node name="Brain" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Brain"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brain"

[node name="BrainScore" type="SpinBox" parent="Brain"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false

[node name="Nerve" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Nerve"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nerve"

[node name="NerveScore" type="SpinBox" parent="Nerve"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false

[node name="Heart" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Heart"]
layout_mode = 2
size_flags_horizontal = 3
text = "Heart"

[node name="HeartScore" type="SpinBox" parent="Heart"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
editable = false
